Text alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,7 @@ h4 {
     font-size: 1.5rem;
     font-weight: 600;
     line-height: 32px;
+    text-align: center;
 }
 
 h5 {
